# napari-error-dialogs

./: LICENSE  README.md  setup.cfg  tox.ini
docs/: conf.py  index.rst
src/napari_error_dialogs/: napari.yaml
src/napari_error_dialogs/_tests/: test_dock_widget.py  test_reader.py  test_sample_data.py  test_writer.py
