[metadata]
name = napari-error-dialogs
version = 0.0.1
author = DPS
author_email = d.perez-suarez@ucl.ac.uk
url = https://github.com/dpshelio/napari-error-dialogs
license = BSD-3-Clause
description = A plugin to test different error messages outputs
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/dpshelio/napari-error-dialogs/issues
    Documentation = https://github.com/dpshelio/napari-error-dialogs#README.md
    Source Code = https://github.com/dpshelio/napari-error-dialogs
    User Support = https://github.com/dpshelio/napari-error-dialogs/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
napari-error-dialogs = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    napari-error-dialogs = napari_error_dialogs:napari.yaml
